# flower-neural-network

./: .gitignore  CMakeLists.txt  Dockerfile  README  build.lua  build.sh  docker-compose.yml  main.cxx  net.R  premake5.lua
cmake/: ModulesLocalBuild.cmake  ProjectModules.cmake
src/: ActivationLayer.cpp  ActivationLayer.hpp  Batch.cxx  Config.cxx  Config.hpp  Dataset.cpp  Dataset.cxx  Dataset.hpp  DenseLayer.cpp  DenseLayer.cxx  DenseLayer.hpp  Loss.cxx  Loss.hpp  Model.cxx  Optimizer.cxx  Tensor.cxx  Tensor.hpp  TensorClass.cxx  TensorHelpers.cxx  TensorOperators.cxx  Utilities.cxx  Utils.hpp  activation.py  dataset.py  ex.py  layer.py  loss.py  main.cpp  main.cxx  network.py  utils.py
src/Tensor/: TensorClass.cxx  TensorModule.cxx
